libs/@local/hashql/syntax-jexpr/src/lexer/snapshots/hashql_syntax_jexpr__lexer__test__control_char_tab_inside_quotes.snap
---
source: libs/@local/hashql/syntax-jexpr/src/lexer/mod.rs
description: Tab character inside quotes
expression: "\"\thello\""
---
[31m[lexer::invalid-string] Error:[0m Lexer
   ╭─[ <unknown>:1:3 ]
   │
 1 │ "   hello"
   │     │ 
   │     ╰─ Invalid ASCII control character
   │ 
   │ Help: 0x00 to 0x1F cannot be used in JSON strings unless escaped
───╯
