libs/@local/hashql/syntax-jexpr/src/lexer/snapshots/hashql_syntax_jexpr__lexer__test__control_character.snap
---
source: libs/@local/hashql/syntax-jexpr/src/lexer/mod.rs
description: String with ASCII control character
expression: "\"hello \u0007 world"
---
[31m[lexer::invalid-string] Error:[0m Lexer
   ╭─[ <unknown>:1:9 ]
   │
 1 │ "hello  world
   │         │ 
   │         ╰─ Control character not allowed
   │ 
   │ Help: ASCII control characters (0x00 to 0x1F) cannot be used in JSON strings unless escaped
───╯
