libs/@local/hashql/syntax-jexpr/src/lexer/snapshots/hashql_syntax_jexpr__lexer__test__decimal.snap
---
source: libs/@local/hashql/syntax-jexpr/src/lexer/mod.rs
description: Decimal number
expression: "3.14159"
---
3.14159
