libs/@local/hashql/syntax-jexpr/src/lexer/snapshots/hashql_syntax_jexpr__lexer__test__emoji_family.snap
---
source: libs/@local/hashql/syntax-jexpr/src/lexer/mod.rs
description: Family emoji with zero-width joiners
expression: 👨‍👩‍👧‍👦
---
[31m[lexer::invalid-character] Error:[0m Invalid character
   ╭─[ <unknown>:1:1 ]
   │
 1 │ 👨‍👩‍👧‍👦
   │ ┬─  
   │ ╰─── Unrecognized character
   │ 
   │ Help: J-Expr only supports standard JSON syntax. Make sure you're using valid JSON tokens like {}, [], strings, numbers, true/false, or null.
───╯
