libs/@local/hashql/syntax-jexpr/src/lexer/snapshots/hashql_syntax_jexpr__lexer__test__emoji_in_bad_context.snap
---
source: libs/@local/hashql/syntax-jexpr/src/lexer/mod.rs
description: Emoji in invalid context
expression: hello🦀world
---
[31m[lexer::invalid-character] Error:[0m Lexer
   ╭─[ <unknown>:1:1 ]
   │
 1 │ hello🦀world
   │ ┬  
   │ ╰── Unrecognized character
───╯
